Amélioration matrice ACs vs Activités Mise en place de la matrice de dépendance SAE vs Ressources

--- a/latex/synthese/S1_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S1_acs_vs_saes_ressources.tex
@@ -1,15 +1,6 @@
-\begin{tabular}[c]{|lp{4cm}|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\begin{tabular}[c]{|l|p{4cm}|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
 \hline 
- & & \multicolumn{6}{c|}{\textcolor{saeC}{\bfseries SAÉs}}
- & \multicolumn{15}{c|}{\textcolor{ressourceC}{\bfseries Ressources}}\\ 
-\cline{3-23} & & \rotatebox[origin=l]{90}{\tiny{Se sensibiliser à l'hygiène informatique et à la cybersécurité}}
- & \rotatebox[origin=l]{90}{\tiny{S'initier aux réseaux informatiques}}
- & \rotatebox[origin=l]{90}{\tiny{Découvrir un dispositif de transmission}}
- & \rotatebox[origin=l]{90}{\tiny{Se présenter sur Internet}}
- & \rotatebox[origin=l]{90}{\tiny{Traiter des données}}
- & \rotatebox[origin=l]{90}{\tiny{Portfolio}}
-
- & \rotatebox[origin=l]{90}{\tiny{Initiation aux réseaux informatiques}}
+ & & \rotatebox[origin=l]{90}{\tiny{Initiation aux réseaux informatiques}}
  & \rotatebox[origin=l]{90}{\tiny{Principes et architecture des réseaux}}
  & \rotatebox[origin=l]{90}{\tiny{Réseaux locaux et équipements actifs}}
  & \rotatebox[origin=l]{90}{\tiny{Fondamentaux des systèmes électroniques}}
@@ -27,14 +18,7 @@
 
 \\ 
  & & 
-\rotatebox[origin=r]{90}{~\hyperlink{SAE11}{\textcolor{saeC}{SAÉ1.1}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{SAE12}{\textcolor{saeC}{SAÉ1.2}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{SAE13}{\textcolor{saeC}{SAÉ1.3}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{SAE14}{\textcolor{saeC}{SAÉ1.4}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{SAE15}{\textcolor{saeC}{SAÉ1.5}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{SAE16}{\textcolor{saeC}{SAÉ1.6}}}
-
- & \rotatebox[origin=r]{90}{~\hyperlink{R101}{\textcolor{ressourceC}{R1.01}}}
+\rotatebox[origin=r]{90}{~\hyperlink{R101}{\textcolor{ressourceC}{R1.01}}}
  & \rotatebox[origin=r]{90}{~\hyperlink{R102}{\textcolor{ressourceC}{R1.02}}}
  & \rotatebox[origin=r]{90}{~\hyperlink{R103}{\textcolor{ressourceC}{R1.03}}}
  & \rotatebox[origin=r]{90}{~\hyperlink{R104}{\textcolor{ressourceC}{R1.04}}}
@@ -52,101 +36,28 @@
 
 \\ 
 \hline 
-\multicolumn{23}{|l|}{\hyperlink{RT1}{\textcolor{compCA}{\bfseries RT1 - Administrer les réseaux et l'Internet }}} \\ 
-\multicolumn{23}{|l|}{\small Niveau 1 - Assister l'administrateur du réseau} \\ 
-\hline 
-\textcolor{compCA}{AC11.01} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Maîtriser les lois fondamentales de l’électricité afin d’intervenir sur des équipements de réseaux et télécommunications}}\end{tabular} & 
- & $\times$ &  &  &  & $\times$
- &  &  &  & $\times$ &  &  &  &  &  &  &  &  & $\times$ & $\times$ & \\ 
-\hline 
-\textcolor{compCA}{AC11.02} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Comprendre l'architecture et les fondements des systèmes numériques, les principes du codage de l'information, des communications et de l'Internet}}\end{tabular} & 
-$\times$ & $\times$ &  &  &  & $\times$
- &  &  &  &  &  & $\times$ &  &  &  & $\times$ &  & $\times$ &  &  & \\ 
-\hline 
-\textcolor{compCA}{AC11.03} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Configurer les fonctions de base du réseau local}}\end{tabular} & 
- & $\times$ &  &  &  & $\times$
- & $\times$ &  & $\times$ &  &  &  &  &  &  &  &  &  &  &  & \\ 
-\hline 
-\textcolor{compCA}{AC11.04} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et l'administration des réseaux et services fournis}}\end{tabular} & 
-$\times$ & $\times$ &  &  &  & $\times$
- &  & $\times$ &  &  &  &  &  & $\times$ &  & $\times$ &  &  &  &  & \\ 
-\hline 
-\textcolor{compCA}{AC11.05} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Identifier les dysfonctionnements du réseau local et savoir les signaler}}\end{tabular} & 
-$\times$ & $\times$ &  &  &  & $\times$
- & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
-\hline 
-\textcolor{compCA}{AC11.06} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Installer un poste client, expliquer la procédure mise en place}}\end{tabular} & 
- & $\times$ &  &  &  & $\times$
- & $\times$ &  & $\times$ &  &  &  &  & $\times$ &  &  & $\times$ &  &  &  & \\ 
-\hline 
-\hline 
-\multicolumn{23}{|l|}{\hyperlink{RT2}{\textcolor{compCB}{\bfseries RT2 - Connecter les entreprises et les usagers }}} \\ 
-\multicolumn{23}{|l|}{\small Niveau 1 - Découvrir les transmissions et la ToIP} \\ 
-\hline 
-\textcolor{compCB}{AC12.01} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Mesurer et analyser les signaux}}\end{tabular} & 
- &  & $\times$ &  &  & $\times$
- &  &  &  & $\times$ & $\times$ &  &  &  &  &  &  &  & $\times$ & $\times$ & \\ 
-\hline 
-\textcolor{compCB}{AC12.02} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}}\end{tabular} & 
- &  &  &  &  & 
- &  &  &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ & \\ 
-\hline 
-\textcolor{compCB}{AC12.03} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Déployer des supports de transmission}}\end{tabular} & 
- &  & $\times$ &  &  & $\times$
- & $\times$ &  & $\times$ &  & $\times$ &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
-\hline 
-\textcolor{compCB}{AC12.04} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Connecter les systèmes de ToIP}}\end{tabular} & 
- &  &  &  &  & 
- &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
-\hline 
-\textcolor{compCB}{AC12.05} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Communiquer avec un tiers (client, collaborateur...) et adapter son discours et sa langue à son interlocuteur}}\end{tabular} & 
- &  & $\times$ &  &  & $\times$
- &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ &  &  &  & $\times$\\ 
-\hline 
-\hline 
-\multicolumn{23}{|l|}{\hyperlink{RT3}{\textcolor{compCC}{\bfseries RT3 - Créer des outils et applications informatiques pour les R\&T }}} \\ 
-\multicolumn{23}{|l|}{\small Niveau 1 - S'intégrer dans un service informatique} \\ 
-\hline 
-\textcolor{compCC}{AC13.01} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Utiliser un système informatique et ses outils}}\end{tabular} & 
- &  &  & $\times$ & $\times$ & $\times$
- & $\times$ &  & $\times$ &  &  & $\times$ & $\times$ & $\times$ &  & $\times$ & $\times$ & $\times$ &  &  & \\ 
-\hline 
-\textcolor{compCC}{AC13.02} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Lire, exécuter, corriger et modifier un programme}}\end{tabular} & 
- &  &  &  & $\times$ & $\times$
- &  &  &  &  &  &  & $\times$ & $\times$ &  &  &  &  &  &  & \\ 
-\hline 
-\textcolor{compCC}{AC13.03} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Traduire un algorithme, dans un langage et pour un environnement donné}}\end{tabular} & 
- &  &  &  & $\times$ & $\times$
- &  &  &  &  &  &  & $\times$ &  &  &  &  &  &  &  & \\ 
-\hline 
-\textcolor{compCC}{AC13.04} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Connaître l'architecture et les technologies d'un site Web}}\end{tabular} & 
- &  &  & $\times$ & $\times$ & $\times$
- &  &  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  &  &  & \\ 
-\hline 
-\textcolor{compCC}{AC13.05} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Choisir les mécanismes de gestion de données adaptés au développement de l'outil et argumenter ses choix}}\end{tabular} & 
- &  &  &  & $\times$ & $\times$
- &  &  &  &  &  &  &  &  &  &  &  &  &  &  & \\ 
-\hline 
-\textcolor{compCC}{AC13.06} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{S'intégrer dans un environnement propice au développement et au travail collaboratif}}\end{tabular} & 
- &  &  &  & $\times$ & $\times$
- &  &  &  &  &  &  & $\times$ &  &  & $\times$ & $\times$ &  &  &  & $\times$\\ 
-\hline 
-\hline 
+~\hyperlink{SAE11}{\textcolor{saeC}{SAÉ1.1}} & \begin{tabular}{p{3.8cm}} \tiny{\textit{Se sensibiliser à l'hygiène informatique et à la cybersécurité}}\end{tabular} & 
+$\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ & $\times$ &  &  &  & $\leftarrow$
+\\ 
+ \hline 
+~\hyperlink{SAE12}{\textcolor{saeC}{SAÉ1.2}} & \begin{tabular}{p{3.8cm}} \tiny{\textit{S'initier aux réseaux informatiques}}\end{tabular} & 
+$\times$ & $\times$ & $\times$ & $\times$ &  & $\times$ &  & $\times$ &  & $\times$ & $\times$ &  &  &  & $\leftarrow$
+\\ 
+ \hline 
+~\hyperlink{SAE13}{\textcolor{saeC}{SAÉ1.3}} & \begin{tabular}{p{3.8cm}} \tiny{\textit{Découvrir un dispositif de transmission}}\end{tabular} & 
+ &  & $\times$ & $\times$ & $\times$ & $\times$ &  &  &  & $\times$ & $\times$ &  & $\times$ & $\times$ & $\leftarrow$
+\\ 
+ \hline 
+~\hyperlink{SAE14}{\textcolor{saeC}{SAÉ1.4}} & \begin{tabular}{p{3.8cm}} \tiny{\textit{Se présenter sur Internet}}\end{tabular} & 
+ &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ &  &  & $\times$
+\\ 
+ \hline 
+~\hyperlink{SAE15}{\textcolor{saeC}{SAÉ1.5}} & \begin{tabular}{p{3.8cm}} \tiny{\textit{Traiter des données}}\end{tabular} & 
+ &  &  &  &  & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ &  &  &  & $\times$
+\\ 
+ \hline 
+~\hyperlink{SAE16}{\textcolor{saeC}{SAÉ1.6}} & \begin{tabular}{p{3.8cm}} \tiny{\textit{Portfolio}}\end{tabular} & 
+ &  &  &  &  &  &  &  &  & $\leftarrow$ & $\times$ & $\times$ &  &  & 
+\\ 
+ \hline 
 \end{tabular}
