--- a/latex/synthese/S2_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S2_acs_vs_saes_ressources.tex
@@ -1,14 +1,6 @@
-\begin{tabular}[c]{|lp{4cm}|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\begin{tabular}[c]{|l|p{4cm}|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
 \hline 
- & & \multicolumn{5}{c|}{\textcolor{saeC}{\bfseries SAÉs}}
- & \multicolumn{14}{c|}{\textcolor{ressourceC}{\bfseries Ressources}}\\ 
-\cline{3-21} & & \rotatebox[origin=l]{90}{\tiny{Construire un réseau informatique pour une petite structure}}
- & \rotatebox[origin=l]{90}{\tiny{Mesurer et caractériser un signal ou un système}}
- & \rotatebox[origin=l]{90}{\tiny{Mettre en place une solution informatique pour l'entreprise}}
- & \rotatebox[origin=l]{90}{\tiny{Projet intégratif}}
- & \rotatebox[origin=l]{90}{\tiny{Portfolio}}
-
- & \rotatebox[origin=l]{90}{\tiny{Technologies de l'Internet}}
+ & & \rotatebox[origin=l]{90}{\tiny{Technologies de l'Internet}}
  & \rotatebox[origin=l]{90}{\tiny{Administration système et fondamentaux de la virtualisation}}
  & \rotatebox[origin=l]{90}{\tiny{Bases des services réseaux}}
  & \rotatebox[origin=l]{90}{\tiny{Initiation à la téléphonie d'entreprise}}
@@ -25,13 +17,7 @@
 
 \\ 
  & & 
-\rotatebox[origin=r]{90}{~\hyperlink{SAE21}{\textcolor{saeC}{SAÉ2.1}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{SAE22}{\textcolor{saeC}{SAÉ2.2}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{SAE23}{\textcolor{saeC}{SAÉ2.3}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{SAE24}{\textcolor{saeC}{SAÉ2.4}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{SAE25}{\textcolor{saeC}{SAÉ2.5}}}
-
- & \rotatebox[origin=r]{90}{~\hyperlink{R201}{\textcolor{ressourceC}{R2.01}}}
+\rotatebox[origin=r]{90}{~\hyperlink{R201}{\textcolor{ressourceC}{R2.01}}}
  & \rotatebox[origin=r]{90}{~\hyperlink{R202}{\textcolor{ressourceC}{R2.02}}}
  & \rotatebox[origin=r]{90}{~\hyperlink{R203}{\textcolor{ressourceC}{R2.03}}}
  & \rotatebox[origin=r]{90}{~\hyperlink{R204}{\textcolor{ressourceC}{R2.04}}}
@@ -48,101 +34,24 @@
 
 \\ 
 \hline 
-\multicolumn{21}{|l|}{\hyperlink{RT1}{\textcolor{compCA}{\bfseries RT1 - Administrer les réseaux et l'Internet }}} \\ 
-\multicolumn{21}{|l|}{\small Niveau 1 - Assister l'administrateur du réseau} \\ 
-\hline 
-\textcolor{compCA}{AC11.01} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Maîtriser les lois fondamentales de l’électricité afin d’intervenir sur des équipements de réseaux et télécommunications}}\end{tabular} & 
- &  &  & $\times$ & $\times$
- &  &  &  &  & $\times$ &  &  &  &  &  &  &  &  & $\times$\\ 
-\hline 
-\textcolor{compCA}{AC11.02} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Comprendre l'architecture et les fondements des systèmes numériques, les principes du codage de l'information, des communications et de l'Internet}}\end{tabular} & 
-$\times$ &  &  & $\times$ & $\times$
- &  &  &  &  &  & $\times$ & $\times$ &  & $\times$ & $\times$ & $\times$ &  & $\times$ & \\ 
-\hline 
-\textcolor{compCA}{AC11.03} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Configurer les fonctions de base du réseau local}}\end{tabular} & 
-$\times$ &  &  & $\times$ & $\times$
- & $\times$ & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
-\hline 
-\textcolor{compCA}{AC11.04} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et l'administration des réseaux et services fournis}}\end{tabular} & 
-$\times$ &  &  & $\times$ & $\times$
- &  & $\times$ & $\times$ &  &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
-\hline 
-\textcolor{compCA}{AC11.05} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Identifier les dysfonctionnements du réseau local et savoir les signaler}}\end{tabular} & 
-$\times$ &  &  & $\times$ & $\times$
- & $\times$ & $\times$ & $\times$ & $\times$ &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  & \\ 
-\hline 
-\textcolor{compCA}{AC11.06} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Installer un poste client, expliquer la procédure mise en place}}\end{tabular} & 
-$\times$ &  &  & $\times$ & $\times$
- & $\times$ & $\times$ &  & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
-\hline 
-\hline 
-\multicolumn{21}{|l|}{\hyperlink{RT2}{\textcolor{compCB}{\bfseries RT2 - Connecter les entreprises et les usagers }}} \\ 
-\multicolumn{21}{|l|}{\small Niveau 1 - Découvrir les transmissions et la ToIP} \\ 
-\hline 
-\textcolor{compCB}{AC12.01} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Mesurer et analyser les signaux}}\end{tabular} & 
- & $\times$ &  & $\times$ & $\times$
- &  &  &  &  & $\times$ & $\times$ &  &  &  &  &  &  &  & $\times$\\ 
-\hline 
-\textcolor{compCB}{AC12.02} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}}\end{tabular} & 
- & $\times$ &  & $\times$ & $\times$
- &  &  &  &  & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ & $\times$\\ 
-\hline 
-\textcolor{compCB}{AC12.03} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Déployer des supports de transmission}}\end{tabular} & 
- & $\times$ &  & $\times$ & $\times$
- & $\times$ &  &  & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
-\hline 
-\textcolor{compCB}{AC12.04} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Connecter les systèmes de ToIP}}\end{tabular} & 
- &  &  & $\times$ & $\times$
- &  &  &  &  &  &  &  &  &  &  &  &  &  & \\ 
-\hline 
-\textcolor{compCB}{AC12.05} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Communiquer avec un tiers (client, collaborateur...) et adapter son discours et sa langue à son interlocuteur}}\end{tabular} & 
- & $\times$ &  & $\times$ & $\times$
- &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  & \\ 
-\hline 
-\hline 
-\multicolumn{21}{|l|}{\hyperlink{RT3}{\textcolor{compCC}{\bfseries RT3 - Créer des outils et applications informatiques pour les R\&T }}} \\ 
-\multicolumn{21}{|l|}{\small Niveau 1 - S'intégrer dans un service informatique} \\ 
-\hline 
-\textcolor{compCC}{AC13.01} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Utiliser un système informatique et ses outils}}\end{tabular} & 
- &  & $\times$ & $\times$ & $\times$
- & $\times$ & $\times$ &  & $\times$ &  &  & $\times$ & $\times$ & $\times$ &  &  &  & $\times$ & \\ 
-\hline 
-\textcolor{compCC}{AC13.02} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Lire, exécuter, corriger et modifier un programme}}\end{tabular} & 
- &  & $\times$ & $\times$ & $\times$
- &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  &  &  &  & \\ 
-\hline 
-\textcolor{compCC}{AC13.03} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Traduire un algorithme, dans un langage et pour un environnement donné}}\end{tabular} & 
- &  & $\times$ & $\times$ & $\times$
- &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  &  &  & $\times$ & \\ 
-\hline 
-\textcolor{compCC}{AC13.04} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Connaître l'architecture et les technologies d'un site Web}}\end{tabular} & 
- &  & $\times$ & $\times$ & $\times$
- &  &  &  &  &  &  & $\times$ &  & $\times$ &  &  &  &  & \\ 
-\hline 
-\textcolor{compCC}{AC13.05} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{Choisir les mécanismes de gestion de données adaptés au développement de l'outil et argumenter ses choix}}\end{tabular} & 
- &  & $\times$ & $\times$ & $\times$
- &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  &  &  &  & \\ 
-\hline 
-\textcolor{compCC}{AC13.06} & 
-\begin{tabular}{p{3.8cm}} \tiny{\textit{S'intégrer dans un environnement propice au développement et au travail collaboratif}}\end{tabular} & 
- &  & $\times$ & $\times$ & $\times$
- &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ &  & \\ 
-\hline 
-\hline 
+~\hyperlink{SAE21}{\textcolor{saeC}{SAÉ2.1}} & \begin{tabular}{p{3.8cm}} \tiny{\textit{Construire un réseau informatique pour une petite structure}}\end{tabular} & 
+$\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ & $\times$ &  &  & 
+\\ 
+ \hline 
+~\hyperlink{SAE22}{\textcolor{saeC}{SAÉ2.2}} & \begin{tabular}{p{3.8cm}} \tiny{\textit{Mesurer et caractériser un signal ou un système}}\end{tabular} & 
+ &  &  &  & $\times$ & $\times$ &  &  &  & $\times$ & $\times$ &  & $\times$ & $\times$
+\\ 
+ \hline 
+~\hyperlink{SAE23}{\textcolor{saeC}{SAÉ2.3}} & \begin{tabular}{p{3.8cm}} \tiny{\textit{Mettre en place une solution informatique pour l'entreprise}}\end{tabular} & 
+ &  &  &  &  &  & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ &  & $\times$ & 
+\\ 
+ \hline 
+~\hyperlink{SAE24}{\textcolor{saeC}{SAÉ2.4}} & \begin{tabular}{p{3.8cm}} \tiny{\textit{Projet intégratif}}\end{tabular} & 
+$\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$
+\\ 
+ \hline 
+~\hyperlink{SAE25}{\textcolor{saeC}{SAÉ2.5}} & \begin{tabular}{p{3.8cm}} \tiny{\textit{Portfolio}}\end{tabular} & 
+ &  &  &  &  &  &  &  &  & $\leftarrow$ & $\uparrow$ & $\uparrow$ &  & 
+\\ 
+ \hline 
 \end{tabular}
