Ajout des ressources complémentaires

--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -264,6 +264,12 @@ Document de travail formulant les propositions de l'ACD R\&T pour l'ensemble de 
 \arrayrulecolor{black}
 \input{synthese/referentiel_S6.tex}
 
+%%%%%%%%%%%%%%%%%%%%%
+%%% Complémentaire %%
+%%%%%%%%%%%%%%%%%%%%%
+\arrayrulecolor{black}
+\input{synthese/referentiel_SC.tex}
+
 %%%%%%%%%%%%%%%%%%%%
 %%% ABBREVIATIONS %%
 %%%%%%%%%%%%%%%%%%%%
